[package]
name = "poster"
version = "0.1.0"
edition = "2021"

include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = ">=1.1.0"
actix-web = "4"
actix-web-validator = ">=2.0.0"
validator = { version = ">0.12", features = ["derive"] }
serde =  { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0.51"
chrono = { version = ">=0.4", features = ["serde"] }
uuid = { version = ">=0.6", features = ["serde", "v4"] }
futures-util = ">=0.3.1"
env_logger = ">=0.7.1"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras"] }